changed box to lavender

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Test Page</title>
 </head>
 <body>
-    <div style="background-color: lightgray; width: 100px; height: 100px;"><p>Hello World!</p></div>
+    <div style="background-color: lavender; width: 100px; height: 100px;"><p>Hello World!</p></div>
 </body>
 </html>
