--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
+    <title>Github Test Page</title>
 </head>
 <body>
     <div style="background-color: lightgray; width: 100px; height: 100px;"><p>Hello World!</p></div>
