--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Github Test Page</title>
 </head>
 <body>
-    <div style="background-color: lightblue; width: 300px; height: 100px;"><p>Hello World!</p></div>
+    <div style="background-color: lightblue; width: 300px; height: 100px;"><p>Hello Wireframe!</p></div>
 </body>
 </html>
